# riscv-emu

./: .gitignore  CMakeLists.txt  Justfile  README.md  TODO.txt  bin  build.sh  cpu.cc  cpu.hh  decoder.cc  decoder.hh  elf.cc  elf.hh  experiment.cc  fmt.hh  machine.cc  machine.hh  main.cc  main.hh  memory.cc  memory.hh  register.hh  repl.cc  repl.hh  riscv-emu  test.cc  util.cc  util.hh
.github/workflows/: cmake-multi-platform.yml
probe/: bin  bin-asm  bin-asm.s  bin-c  bin-cpp  dis.s  dis.sh  run.sh  test.asm  test.cc
src/: CMakeLists.txt  Justfile  cpu.cc  cpu.hh  decoder.cc  decoder.hh  elf.cc  elf.hh  fmt.hh  machine.cc  machine.hh  main.cc  memory.cc  memory.hh  register.hh  repl.hh  test.cc  util.cc  util.hh
src/probe/: .gitignore  bin-asm  bin-c  bin-c.s  build.sh  dis.S  dis.s  dis.sh  run.sh  test.asm  test.c
test/: .gitignore  config.ini  run.sh
test/riscof_work/: database.yaml  riscv_emu_isa_checked.yaml  test_list.yaml
test/riscv_emu/: riscof_riscv_emu.py  riscv_emu_isa.yaml
test/riscv_emu/env/: model_test.h
